Update title to slide

--- a/_posts/0000-01-02-learngithub321.md
+++ b/_posts/0000-01-02-learngithub321.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our LearnGitHub321's slide!"
 ---
 This is learngithub321's slide
 Use the left arrow to go back!
