--- a/_posts/0000-01-02-learngithub321.md
+++ b/_posts/0000-01-02-learngithub321.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our LearnGitHub321's slide!"
 ---
-This is learngithub321's slide
+This is my awesome slide
 Use the left arrow to go back!
